# demo-log-observability

./: .env.example  .gitignore  .gitmodules  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
ai-bot/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
ai-bot/src/ai_bot/: config.py  main.py  orchestrator.py
ai-bot/src/ai_bot/analyzer/: claude.py  fake.py  prompts.py  result.py
ai-bot/src/ai_bot/analyzer/tools/: __init__.py  db_schema.py  filesystem.py  finding.py  git_history.py  patch.py
ai-bot/src/ai_bot/db/: models.py  session.py
ai-bot/src/ai_bot/db/migrations/: env.py
ai-bot/src/ai_bot/db/migrations/versions/: 0001_initial.py
ai-bot/src/ai_bot/safety/: benign_cooldown.py  cost_guard.py  dedup.py
ai-bot/src/ai_bot/services/: github_client.py  log_fetcher.py  pr_templates.py  repo_manager.py  slack_notifier.py
ai-bot/src/ai_bot/webhook/: receiver.py  schemas.py
ai-bot/tests/: conftest.py
ai-bot/tests/integration/: test_claude_analyzer.py  test_orchestrator.py  test_orchestrator_with_github.py  test_webhook_receiver.py
ai-bot/tests/unit/: test_benign_cooldown.py  test_config.py  test_cost_guard.py  test_dedup.py  test_github_client.py  test_log_fetcher.py  test_models.py  test_pr_templates.py  test_repo_manager.py  test_slack_notifier.py  test_tools_db_schema.py  test_tools_filesystem.py  test_tools_finding.py  test_tools_git_history.py  test_tools_patch.py  test_webhook_schemas.py
docs/: ARCHITECTURE.md  DEMO_GUIDE.md
infra/alloy/: alloy.hcl
infra/loki/: loki-config.yaml
infra/postgres/: init.sql
(+27 files in other folders)
